* Many parts of the code rewritten. * Fixed fancybox files being loaded on the admin pages * New uninstall options and better handling of new options when installing/updating * New options for close button position, custom jquery expressions, inline content * Options page mostly rewritten, better organized, medium and advanced options hidden by default * Better support guidelines and links * Setting link on the Manage plugins page
git-svn-id: https://plugins.svn.wordpress.org/fancybox-for-wordpress/trunk@103160 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/fancybox.css
+++ b/fancybox.css
@@ -109,7 +109,6 @@ img#fancy_img {
 div#fancy_close {
 	position: absolute;
 	top: -12px;
-	right: -15px;
 	height: 30px;
 	width: 30px;
 	background: url('img/fancy_closebox.png') top left no-repeat;
